refactor: Redis에서 local 메모리로 변경