@@ -2,26 +2,25 @@ package com.fungame.songquiz.domain;
 
 import com.fungame.songquiz.storage.SongEntity;
 import com.fungame.songquiz.storage.SongRepository;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Component;
-
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 
 @Component
 @RequiredArgsConstructor
 public class SongReader {
     private final SongRepository songRepository;
 
-    public List<Long> findSongByCategoryWithCount(Category category, int count) {
-        List<Long> songs = songRepository.findByCategory(category);
+    public List<Song> findSongByCategoryWithCount(Category category, int count) {
+        List<SongEntity> songs = songRepository.findByCategory(category);
 
         Collections.shuffle(songs);
 
         return songs.stream()
                 .limit(count)
-                .collect(Collectors.toList());
+                .map(SongEntity::toDomain)
+                .toList();
     }
 
     public Song findById(Long id) {
@@ -36,7 +35,7 @@ public class SongReader {
                 entity.getSinger(),
                 entity.getCategory(),
                 entity.getReleaseDate(),
-                entity.getVideoId(),
+                entity.getVideoLink(),
                 entity.getPlaySeconds(),
                 entity.getAnswers()
         );
